Fixed user details page for mobile and related pages, Redesigned user orders table on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,15 +2,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 
 :root {
-    --primary-color: #E81123;
-    --secondary-color: #00A651;
     --white: #f8f8f5;
     --white600: #F5F5F5;
     --gray: #E0E0E0;
     --black: #000000;
     --padding: 26rem;
-    --success: #4BB543;
+
+    --primary-color: #E81123;
+    --primary100: #fde7e9;
+    --primary200: #f8b8bd;
+    --primary300: #f48891;
+    --primary400: #ef5865;
+    --primary500: #E81123;
+    --primary600: #d10f20;
+    --primary700: #8b0a15;
+
+    --secondary400: #8DCEFC;
+    --secondary500: #0095FF;
+    --secondary600: #0069B4;
+
+    --bg500: #ffffff;
+    --bg600: #fafafa;
+    --bg700: #f6f6f6;
+    --bg800: #ececec;
+    --bg900: #e1e1e1;
+    --bg1000: #d0d0d0;
+    --box-shadow: 0 0 10px rgba(0, 0, 0, .09);
     --error: #ff3333;
+    --error-bg: #f2dedd;
+    --error-text: #a94442;
+    --sucess-bg: #d4edda;
+    --sucess-text: #155724;
+    --sucess: #4BB543;
 }
 
 * {
