--- a/frontend/src/pages/Checkout.css
+++ b/frontend/src/pages/Checkout.css
@@ -102,18 +102,20 @@ button {
         display: none;
     }
 
-    .checkout-form-mobile {
-        display: block;
-        column-gap: 2rem;
-        grid-template-columns: 1fr;
+    .checkout-checkbox {
+        display: grid;
+        grid-template-columns: 5dvh 1fr;
+        margin: 2rem 0;
     }
 
-    .checkout-form-mobile input {
-        padding: 2rem;
-        width: 100%;
-        margin: 1rem 0;
-        grid-column: 1/3;
+    .checkout-form-mobile {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        margin-bottom: 4rem;
     }
+
+    .checkout-form-mobile input {}
 
     .checkout-form-left {
         width: 100%;
