--- a/frontend/src/pages/UserChangePassword.css
+++ b/frontend/src/pages/UserChangePassword.css
@@ -5,9 +5,34 @@
     gap: 4rem;
 }
 
-.user-password-content {}
+.user-password-content .login-form {
+    max-width: 100%;
+    width: 100%;
+}
 
 .user-password-content h1 {
     margin-bottom: 4rem;
     font-size: 3.2rem;
+}
+
+/* ---------- Media querys ---------- */
+
+/* Phone */
+
+@media (max-width: 600px) {
+    .user-password-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 4rem 1rem;
+        gap: 2rem;
+    }
+
+    .user-password-content h1 {
+        margin-bottom: 1rem;
+        font-size: 3.2rem;
+    }
+
+    .reset-form-submit .btn {
+        width: 100%;
+    }
 }
